DIT-26 create layout

--- a/index.html
+++ b/index.html
@@ -18,4 +18,12 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <style>
+    #app {
+      background: rgb(250, 250, 250);
+    }
+    html {
+      background: rgb(250, 250, 250);
+    }
+  </style>
 </html>
